--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
         }
         /* Hover styles for the toad icon within the button */
         .main-links a:hover .icon {
-            filter: none; /* Inverts the black toad PNG to white */
+            filter: brightness(0) invert(1) !important; /* Inverts the black toad PNG to white */
         }
         .main-links a.shop:hover .icon    { background-image: url("./images/toad shop.png"); }
         .main-links a.contact:hover .icon { background-image: url("./images/toad mail.png"); }
@@ -608,7 +608,7 @@
             height: 1.5em;
             object-fit: contain;
             transition: transform 0.5s ease-out; /* For the "hop" animation */
-            filter: brightness(0) invert(1); /* Make them white */
+            filter: none;
         }
 
        /* MOBILE OPTIMIZATION (only for mobile) */
