--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
             align-items: center;
             justify-content: flex-start;
             flex: 0 0 auto;
+            position: relative; /* ADDED: For positioning hoppedToadContainer */
         }
         .logo-circle {
             display: flex;
@@ -136,7 +137,7 @@
             text-align: right;
             margin-bottom: 4px;
             position: relative; /* For positioning hopped toads */
-            padding-left: 30px; /* Space for hopped toads */
+            /* padding-left: 30px; REMOVED: Spacing is now handled by hoppedToadContainer's position */
         }
         /* Subtitle uses DotGothic16 by default (desktop) - unchanged */
         .hero-nav-subtitle {
@@ -1219,6 +1220,7 @@
             frog.style.opacity = '1';        // Ensure toad is visible for peeking
             frog.style.pointerEvents = 'auto'; // Make it clickable again
             frog.style.visibility = 'visible'; // Ensure it's visible again
+            frog.style.display = 'block';    // NEW: Ensure it's displayed for animation
 
             // Store timeout IDs directly on the frog element
             frog.peepTimeoutId = setTimeout(() => {
@@ -1275,6 +1277,7 @@
                     frog.style.opacity = '0';
                     frog.style.pointerEvents = 'none'; // Make it unclickable
                     frog.style.visibility = 'hidden'; // Force it to disappear
+                    frog.style.display = 'none';      // NEW: Completely remove from layout
 
                     // --- Start Hop Animation Logic ---
                     const frogRect = frog.getBoundingClientRect(); // Get original frog's position
@@ -1319,17 +1322,18 @@
                         finalToad.classList.add('hopped-toad'); // Use the existing hopped-toad class for static ones
                         hoppedToadContainer.appendChild(finalToad);
 
-                        // Increment count and update padding if needed (for desktop)
-                        hoppedToadCount++;
-                        if (window.innerWidth > 700) {
-                            document.querySelector('.hero-nav-title').style.paddingLeft = `${30 + (hoppedToadCount * 25)}px`;
-                        }
+                        // REMOVED: This line is no longer needed as toads are positioned by CSS
+                        // if (window.innerWidth > 700) {
+                        //     document.querySelector('.hero-nav-title').style.paddingLeft = `${30 + (hoppedToadCount * 25)}px`;
+                        // }
+                        hoppedToadCount++; // Increment count after adding toad
 
                         // *** IMPORTANT: Reset the original frog to allow it to peep again ***
-                        // Remove inline opacity and pointer-events styles
+                        // Remove inline opacity, pointer-events, and display styles
                         frog.style.opacity = '';         // This makes the frog visible again (controlled by CSS)
                         frog.style.pointerEvents = '';   // This makes the frog clickable again
                         frog.style.visibility = '';      // Reset visibility as well
+                        frog.style.display = '';         // NEW: Reset display as well
                         // The doFrogAnimation loop (scheduled by startNextFrogAnimationCycle) will now pick this frog up for another peep cycle when its turn comes.
                     }, { once: true }); // Ensure listener runs only once
                     // --- End Hop Animation Logic ---
@@ -1340,7 +1344,7 @@
         // Initial call to start the animation loop
         startNextFrogAnimationCycle();
 
-        // ADDED JAVASCRIPT CODE FOR MOBILE NAV TOGGLE (unchanged from your file)
+        // JAVASCRIPT CODE FOR MOBILE NAV TOGGLE (unchanged)
         const logoElement = document.querySelector('.logo-circle');
         const navLinksContainer = document.querySelector('.main-links');
 
@@ -1354,9 +1358,8 @@
                 }
             });
         }
-        // END OF NEW JAVASCRIPT CODE
 
-         // News Banner Close Button JavaScript (unchanged from your file)
+        // News Banner Close Button JavaScript (unchanged)
         const newsBanner = document.getElementById('newsBanner');
         const closeBannerBtn = document.querySelector('.close-banner-btn');
 
